2008-09-15  Loic Dachary <loic@dachary.org>

 	* Release 1.7.0

	* pokernetwork/pokerservice.py, tests/test-servercrash.py.in: fix
	  tournament cleanup (trash running tournaments or sng in
	  registering state)
	* pokernetwork/userstats.py: add message method class
	  UserStatsAccessor: for test purposes

2008-09-14  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-userstats.py.in (PokerUserStatsTestCase.MockTable):
	Created mock up.
	(PokerUserStatsTestCase.MockService): created mock up.
	(PokerUserStatsTestCase.MockAvatar): created mock up.

	* pokernetwork/userstats.py
	(UserStatsRankPercentileAccessor._lookupValidStat): Wrote method.

	* tests/test-userstats.py.in
	(PokerUserStatsTestCase.test02_factory): Fixed test to use
	Lookup class.

	* pokernetwork/userstats.py (UserStatsLookup): Created class.
	(UserStatsRankPercentileLookup): Created class.
	(UserStatsFactory.error): Added "Lookup" to end of required class
	string.

	* tests/test-userstats.py.in
	(PokerUserStatsTestCase.test01_baseClass): Renamed to
	test01_userStatsAccessorBaseClass and rewrote.
	(PokerUserStatsTestCase.test02_rankLevel): Renamed to
	test03_rankPercentileAccessor and rewrote.

	* pokernetwork/userstats.py (UserStatsAccessor): reworked
	UserStats class into UserStatsAccessor.

2008-09-13  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-userstats.py.in: Created file.
	(PokerUserStatsTestCase.test01_baseClass): Wrote test.
	(PokerUserStatsTestCase.test02_factory): Wrote test.

	* pokernetwork/userstats.py (UserStats): Created class and file.

2008-09-12  Loic Dachary <loic@dachary.org>

	* database/schema.sql.in: Do not respawn the default tourney to
	  prevent polution of the database.
	* pokernetwork/pokerservice.py, tests/test-servercrash.py.in:
	  Cleanup the tables that have a matching resthost_serial even when
	  they are not listed in the configuration file. This takes care of
	  the tournament tables and tables that were removed from the
	  configuration file.